--- a/css/chat.css
+++ b/css/chat.css
@@ -2,62 +2,110 @@ body {
 	background-image: url("../img/fondo.jpg");
 }
 
+/********************   CHAT   **********************/
 .chat {
 	z-index: 100;
 	border: solid  #E8E7E7 1px;
 	border-radius: 10px;
 	width: 300px;
+	max-height: 90%;
 	position: relative;
 	bottom: 10px; right: 10px;
 	padding: 5px;
 	margin-bottom: 10px;
-	margin-right: 10px;
+	margin-right:  -250px;
+	/*margin-right: 1px; */
 	float: right;
 	position: fixed;
 	background: rgba(0,0,0,0.5);
+	transition: all 1s ease;
 }
-
+.chat:hover {
+	margin-right: 15px;
+	transition: all 1s ease;
+}
+/********************   CAB   **********************/
 .cab {
 	height: 40px;
-	border: solid #FFFAFA 1px;
+	border-bottom: 1px solid #FFFAFA;
+	border-right: 1px solid #FFFAFA;
 	border-radius: 5px 5px 0 0;
 	margin-bottom: 5px;
 }
 
 .cab i {
-	color: #C6FBE1;
+	color: #FFDD67;
 	font-weight: bold;
+	line-height: 0.8em;
 }
 
+
+/********************   MSJ **********************/
 .msjr, .msjl{
 	height: auto;
-	min-width: 50%;
 	max-width: 90%;
-	padding: 5px;
+	width: 50%;
+	padding: 5px 15px 5px 20px;
 	margin-top: 2px;
 	margin-bottom: 3px;	
+	text-align: justify;
 }
 
-
-.msjl{
-	margin-left: 0px;
-	margin-right: auto;
-	border-radius: 20px 30px 30px 5px;
-	background: #FEF2CC;
+.textos {
+	max-height: 400px;
+	overflow-y: auto;
+	white-space: none;
+	padding: 5px;
+	margin-bottom: 2px;
 }
-.msjr{
-	margin-left: auto;
-	margin-right: 0px;
-	border-radius: 30px 20px 5px 30px;
-	background: #9BFD88;
-}
-
 
 .textos i {
-	font-family: courier,arial,helvética;
+	font-family:  helvetica, courier,arial;
 	font-size: 0.8em;
 	font-style: italic;
-	color:#37684F;
+	color:#FFF;
 	line-height: 1em;
 }
 
+.msjl{
+	width: auto;
+	border-radius: 20px 30px 30px 5px;
+	background: rgba(255,150,0,0.5);
+	margin-right: auto;
+	margin-left: 0;
+}
+.msjr{
+	width: auto;
+	border-radius:  30px 20px 5px 30px;
+	background: rgba(50,230,50,0.5);
+	margin-left: auto;
+	margin-right: 0;
+}
+
+::-webkit-scrollbar{
+    width: 4px;
+    background-color: #F5F5F5;
+
+}
+::-webkit-scrollbar-track{
+	background-color: rgba(0,0,0,0.4);
+	width: 4px;
+}
+::-webkit-scrollbar-thumb{
+    background: rgba(180,250,150,0.4);
+}
+
+
+/***************************** ENVIAR ********************/
+.enviar {
+}
+
+.enviar textarea {
+	background: rgba(180,250,150,0.5);
+	font-family: helvetica, courier,arial;
+	text-align: left;
+	font-size: 0.8em;
+	font-style: italic;
+	color:#FFF;
+	line-height: 1em;
+}
