--- a/css/chat.css
+++ b/css/chat.css
@@ -8,16 +8,14 @@ body {
 	border: solid  #E8E7E7 1px;
 	border-radius: 10px;
 	width: 300px;
-	max-height: 90%;
-	position: relative;
-	bottom: 10px; right: 10px;
-	padding: 5px;
+	height: 453px;
+	bottom: 10px; right: 10px;	
 	margin-bottom: 10px;
-	margin-right:  -250px;
-	/*margin-right: 1px; */
-	float: right;
+	padding: 5px;
+	/*margin-right:  -250px;*/
 	position: fixed;
 	background: rgba(0,0,0,0.5);
+	overflow: hidden;
 	transition: all 1s ease;
 }
 .chat:hover {
@@ -52,7 +50,7 @@ body {
 }
 
 .textos {
-	max-height: 400px;
+	height: 350px;
 	overflow-y: auto;
 	white-space: none;
 	padding: 5px;
